--- a/public/login.html
+++ b/public/login.html
@@ -152,7 +152,7 @@
             errorDiv.classList.remove('show');
 
             try {
-                const response = await fetch('/api/login', {
+                const response = await fetch('/auth/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
