--- a/public/footer.html
+++ b/public/footer.html
@@ -16,7 +16,7 @@
           </li>
           <li class="list-inline-item">
             <a href="#" class="link-secondary" data-bs-toggle="modal" data-bs-target="#agbModal" onclick="loadLegalContent('agb')">
-              AGBs
+              AGB
             </a>
           </li>
         </ul>
